<resources>
    <string name="app_name">FoodNinja</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="AppTitle">FoodNinja</string>
    <string name="AppSubTitle">Deliever Favorite Food</string>
    <string name="LoginMessage">Login To Your Account</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="CreateAccount">Don"t you have an account?</string>
    <string name="ResetPassword">Forgot Your Password?</string>
    <string name="LoginButton">Login</string>
    <string name="SignUpMessage">Sign Up For Free</string>
    <string name="CreateButton">Create Account</string>
    <string name="FreeText">Free Delivery</string>
    <string name="Orders">Orders</string>
    <string name="DeliveryCharge">Delivery Charge</string>
    <string name="Total">Total</string>
    <string name="PlaceOrder">Place Order</string>
    <string name="OrderDetails">Order Details</string>
    <string name="EmailProfile">Email:</string>
    <string name="ResetPassProfile">Reset Password</string>
    <string name="SignOut">Sign Out</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="Minutes">30-35 Min</string>
    <string name="ChangeYourPassword">Change Your Password</string>
    <string name="LogOut">Log Out</string>
    <string name="Hi">Hi !</string>
    <string name="AddToCart">Add To Cart</string>
    <string name="DeleteAccount">Delete Account</string>

</resources>