<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.LoginFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/EditTextColors"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            app:boxStrokeColor="@color/LightBoxStrokeColor"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmailLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/email"
                android:drawablePadding="8dp"
                android:hint="@string/Email"
                android:inputType="text|textEmailAddress"
                android:maxLines="2"
                android:textColor="@color/black"
                android:textSize="14dp"
                android:textStyle="bold"
                app:textInputLayoutFocusedRectEnabled="false" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/EditTextColors"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:textColorHint="@color/LightHintTextColor"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            app:boxStrokeColor="@color/LightBoxStrokeColor"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/lock"
                android:drawablePadding="8dp"
                android:hint="@string/Password"
                android:inputType="text|textPassword"
                android:textColor="@color/black"
                android:textSize="14dp"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/salad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        style="@style/TitleColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/angkor"
        android:text="@string/AppTitle"
        android:textSize="24dp"
        android:textStyle="bold"
        app:autoSizeMaxTextSize="24dp"
        app:autoSizeMinTextSize="20dp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <TextView
        android:id="@+id/textView6"
        style="@style/TextsColors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/LoginMessage"
        android:textSize="16dp"
        android:textStyle="bold"
        app:autoSizeMaxTextSize="16dp"
        app:autoSizeMinTextSize="14dp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvCreateAccount"
        style="@style/TextsColors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/CreateAccount"
        android:textSize="14dp"
        android:textStyle="bold"
        app:autoSizeMaxTextSize="14dp"
        app:autoSizeMinTextSize="12dp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/tvForgotPass"
        style="@style/ForgotPassColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/ResetPassword"
        android:textSize="14dp"
        android:textStyle="bold"
        app:autoSizeMaxTextSize="14dp"
        app:autoSizeMinTextSize="12dp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCreateAccount" />

    <Button
        android:id="@+id/btnLogin"
        style="@style/ButtonColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:paddingLeft="40dp"
        android:paddingTop="10dp"
        android:paddingRight="40dp"
        android:paddingBottom="10dp"
        android:text="@string/LoginButton"
        android:textColor="@color/LightButtonTextColor"
        android:textSize="14dp"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>